# integralytix

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2025_03_06_create_device_table_cd1c046a198d.py  2025_03_08_create_devicefilearchive_table_95141327ee25.py  2025_03_09_create_analyticsmodule_and_moduleevent__cbc91f2ce4d6.py  2025_03_13_add_timezone_support_to__874d832d665b.py  2025_03_13_make_devicefilearchive_filepath_nullable_fe8be65424bf.py
prometheus/: prometheus.yml
src/: consts.py  main.py
src/config/: database.py  project_settings.py
src/external_services/redis/: redis.py
src/external_services/storage/: base.py  minio_s3.py
src/infrastructure/storage/: minio_s3.py
src/models/: __init__.py  analytics_modules.py  consts.py  devices.py  module_events.py
src/routes/v1/: __init__.py  analytics_modules.py  devices.py  file_archive.py
src/schemas/: analytics_modules.py  devices.py  file_archive.py  module_events.py
src/services/: analytics_modules.py  base.py  devices.py  file_archive.py  module_events.py
tests/: conftest.py  test_devices.py
tests/endpoints/: test_analytics_modules.py  test_devices.py  test_file_archive.py
tests/mocks/: fake_storage.py
